# py-lapsolver

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  ReadMe.md  appveyor.yml  deploy_twine.ps1  setup.py
fast_hungarian/: __init__.py
fast_hungarian/tests/: test_hungarian.py
lapsolver/: __init__.py
lapsolver/benchmarks/: plot_results.py  test_benchmark_solvers.py
lapsolver/data/dense/: costs0.npz  costs1.npz  costs10.npz  costs2.npz  costs3.npz  costs4.npz  costs5.npz  costs6.npz  costs7.npz  costs8.npz  costs9.npz
lapsolver/tests/: test_dense.py  test_files.py
src/: dense_wrap.hpp  hungarian.cpp  hungarian.hpp  lapsolverc.cpp
tests/: test_hungarian.py
